<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    android:orientation="vertical"
    tools:context=".AdminRegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="Register"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="33dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_background"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14dp" />

            <EditText
                android:id="@+id/etShopName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_background"
                android:hint="Doctor/Nurse Name"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14dp" />


            <EditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_background"
                android:hint="Phone"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14dp" />

            <EditText
                android:id="@+id/etPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_background"
                android:hint="Password"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14dp" />

            <EditText
                android:id="@+id/etConPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_background"
                android:hint="Confirm Password"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14dp" />

            <EditText
                android:id="@+id/etAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_background"
                android:hint="Address"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14dp" />

            <LinearLayout
                android:id="@+id/addressLayout"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etCountry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/edittext_background"
                    android:hint="country"
                    android:layout_weight="1"
                    android:inputType="textPostalAddress"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="14dp" />
                <EditText
                    android:id="@+id/etState"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext_background"
                    android:hint="state"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:inputType="textPostalAddress"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="14dp" />
                <EditText
                    android:id="@+id/etCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext_background"
                    android:hint="city"
                    android:layout_weight="1"
                    android:inputType="textPostalAddress"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="14dp" />

            </LinearLayout>




            <Button
                android:id="@+id/btnReg"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_login"
                android:stateListAnimator="@null"
                android:text="Register"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14dp"
                android:textStyle="bold" />


        </LinearLayout>


    </RelativeLayout>
</RelativeLayout>