...
    android:layout_height="match_parent"
    android:background="@color/purple"
    android:gravity="center"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
...
                android:text="Don't have an account ? "
                android:textSize="14dp"
                android:layout_marginBottom="15dp"
                android:textColor="@color/white"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tvReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Register"
                android:textSize="14dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/blue"
...
